[#3390] Remove constraint on multiple different mappings from same system